Change repository name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jamayoral.github.io/portfolio",
+  "homepage": "https://jamayoral.github.io/website",
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
